# trinculo

./: Cargo.toml  LICENSE  README.md  cspell-words.txt  cspell.config.yaml
benches/: baseline.rs  interpret.rs  parse.rs  reclaim.rs  reuse.rs  thread_par.rs  translate.rs
src/: baseline.rs  combo_par.rs  direct.rs  expr.rs  lib.rs  main.rs  reclaim.rs  reuse.rs  simd_par.rs  thread_par.rs  unused.rs  utils.rs
src/snapshots/: trinculo__baseline__tests__baseline_16.snap  trinculo__combo_par__tests__snapshot.snap  trinculo__direct__tests__small.snap  trinculo__expr__tests__prospero.vm.snap  trinculo__reclaim__tests__small.snap  trinculo__simd_par__tests__snapshot.snap  trinculo__tests__quote.snap  trinculo__thread_par__tests__snapshot.snap
