[package]
name = "trinculo"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
zmij = "1.0.21"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.measure]
inherits = "release"
opt-level = 3
debug = true
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dev-dependencies]
insta = "1.46.3"
proptest = "1.10.0"
proptest-derive = "0.8.0"
rstest = "0.26.1"
