[package]
name = "trinculo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
image = { version = "0.25.10", default-features = false, features = ["png"] }
itertools = "0.14.0"
log = "0.4.29"
rayon = "1.11.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.measure]
inherits = "release"
opt-level = 3
debug = true
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "baseline"
harness = false

[[bench]]
name = "reuse"
harness = false

[[bench]]
name = "reclaim"
harness = false

[[bench]]
name = "thread_par"
harness = false

[dev-dependencies]
criterion = "0.8.2"
insta = "1.46.3"
proptest = "1.10.0"
proptest-derive = "0.8.0"
rstest = "0.26.1"
tempfile = "3.27.0"
